解决mock打包后读不了json文件的问题